Port task persistence coordinator to Java 8